# Training-Invertible-Neural-Networks-as-Autoencoders

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Classical Autoencoder-CelebA.ipynb  Classical Autoencoder-Cifar.ipynb  Classical autoencoder-mnist.ipynb  INN Autoencoder_celeba-glow.ipynb  INN Autoencoder_cifar-glow.ipynb  INN Autoencoder_mnist-glow.ipynb  Pipfile  Plot.ipynb  README.md  pyproject.toml  setup.cfg
FrEIA/modules/: coeff_functs.py  reshapes.py
architecture/: INN.py
architecture/.ipynb_checkpoints/: CelebA_autoencoder-checkpoint.py  INN-checkpoint.py
functionalities/: CIFAR_coder_loss.py  Latent_Traverser.py  MMD_autoencoder_loss.py  evaluater.py  experiment_inn.py  filemanager.py  loss.py  plot.py  tracker.py  trainer.py  traverser.py
functionalities/.ipynb_checkpoints/: dataloader-checkpoint.py
legacy_code/architecture/: CIFAR_autoencoder.py  CelebA_autoencoder.py  INN.py  MNIST_autoencoder.py
legacy_code/functionalities/: Latent_Traverser.py  MMD_autoencoder_loss.py  evaluater.py  filemanager.py  gpu.py  loss.py  parameter_counter.py  plot.py  tracker.py  trainer.py  traverser.py
src/: __init__.py  architecture.py  dataloader.py  experiment.py  filemanager.py  functionalities.py  loss.py  main.py  plot.py  settings.py  trainer.py
tests/: __init__.py  test_architecture.py  test_dataloader.py  test_experiment.py  test_filemanager.py  test_functionalities.py  test_loss.py  test_main.py  test_plot.py  test_trainer.py
