[tool.poetry]
name = "training_invertible_neural_networks_as_autoencoders"
version = "0.1.0"
description = "This code accompanies the paper: Nguyen, TG.L., Ardizzone, L., Köthe, U. (2019). Training Invertible Neural Networks as Autoencoders. In: Fink, G., Frintrop, S., Jiang, X. (eds) Pattern Recognition. DAGM GCPR 2019. Lecture Notes in Computer Science(), vol 11824. Springer, Cham. https://doi.org/10.1007/978-3-030-33676-9_31"
authors = ["Xenovortex <Leo.Nguyen@gmx.de>"]
readme = "README.md"
packages = [{include = "FrEIA"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.13.1"
torchvision = "^0.14.1"
tqdm = "^4.65.0"

[tool.poetry.group.dev.dependencies]
black = "23.1a1"
isort = "^5.12.0"
flake8 = "^6.0.0"
darglint = "^1.8.1"
pydocstyle = "^6.3.0"
pyupgrade = "^3.3.1"
pylint = "^2.16.2"
mypy = "^1.0.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
bandit = "^1.7.4"
safety = "^2.3.5"
pre-commit = "^3.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
